[mellanox] Align formatting
Signed-off-by: Nazarii Hnydyn <nazariig@mellanox.com>

--- a/platform/mellanox/mlnx-fw-upgrade.j2
+++ b/platform/mellanox/mlnx-fw-upgrade.j2
@@ -200,8 +200,8 @@ function UpgradeASICFW() {
 
     LogNotice "ASIC firmware upgrade is required. Installing compatible version..."
 
-    LogInfo "Current ASIC firmware version: ${_FW_CURRENT}"
-    LogInfo "Target ASIC firmware version: ${_FW_AVAILABLE}"
+    LogInfo "current ASIC firmware version: ${_FW_CURRENT}"
+    LogInfo "target ASIC firmware version: ${_FW_AVAILABLE}"
 
     LogInfo "ASIC firmware file: ${_FW_FILE}"
 
@@ -249,8 +249,8 @@ function UpgradeCPLDFW() {
 
     LogNotice "CPLD firmware upgrade is required. Installing compatible version..."
 
-    LogInfo "Current CPLD firmware version: ${_CURRENT_CPLD_VERSION}"
-    LogInfo "Target CPLD firmware version: ${_TARGET_CPLD_VERSION}"
+    LogInfo "current CPLD firmware version: ${_CURRENT_CPLD_VERSION}"
+    LogInfo "target CPLD firmware version: ${_TARGET_CPLD_VERSION}"
 
     LogInfo "CPLD burn firmware file: ${_CPLD_BURN_FILE}"
     LogInfo "CPLD refresh firmware file: ${_CPLD_REFRESH_FILE}"
