--- a/platform/mellanox/mlnx-fw-upgrade.j2
+++ b/platform/mellanox/mlnx-fw-upgrade.j2
@@ -18,12 +18,6 @@ declare -r NO_PARAM="no"
 declare -r EXIT_SUCCESS="0"
 declare -r EXIT_FAILURE="1"
 
-declare -r CPLD_UPDATE_DIR="/etc/mlnx/cpld"
-declare -r CPLD_UPDATE_CONFIG="${CPLD_UPDATE_DIR}/cpld_update.cfg"
-
-declare -r CPLD_UPDATE_PERMIT="1"
-declare -r CPLD_UPDATE_DENY="0"
-
 declare -r QUERY_CMD="mlxfwmanager --query"
 declare -r BURN_CMD="mlxfwmanager -u -f -y"
 
@@ -221,31 +215,36 @@ function UpgradeASICFW() {
 }
 
 function UpgradeCPLDFW_Worker() {
-    RunCmd "cpldupdate --dev ${1} ${2}"
-    RunCmd "cpldupdate --dev ${1} ${3}"
+    local -r _CPLD_BURN_FILE="${1}"
+    local -r _CPLD_REFRESH_FILE="${2}"
+    local -r _ASIC_DEV="$(find /dev/mst -iname '*_pciconf0')"
+
+    if [[ "${UPDATE_MLNX_CPLD_FW}" = "1" ]]; then
+        RunCmd "cpldupdate --dev ${_ASIC_DEV} ${_CPLD_REFRESH_FILE}"
+        return "${EXIT_SUCCESS}"
+    fi
+
+    RunCmd "cpldupdate --dev ${_ASIC_DEV} ${_CPLD_BURN_FILE}"
+    RunCmd "cpldupdate --dev ${_ASIC_DEV} ${_CPLD_REFRESH_FILE}"
 }
 
 function UpgradeCPLDFW() {
     local -r _CPLD_ARCHIVE="$1"
-    local -r _ASIC_DEV="$(find /dev/mst -iname '*_pciconf0')"
+
+    if [[ "${UPDATE_MLNX_CPLD_FW}" = "1" ]]; then
+        LogWarning "Forced CPLD refresh was requested for ${ONIE_PLATFORM}"
+        CPLD_UPGRADE="${YES_PARAM}"
+    fi
+
+    if [[ "${CPLD_UPGRADE}" != "${YES_PARAM}" ]]; then
+        LogNotice "CPLD upgrade was not requested for ${ONIE_PLATFORM}"
+        return "${EXIT_SUCCESS}"
+    fi
 
     if [[ ! -f "${_CPLD_ARCHIVE}" ]]; then
         LogNotice "CPLD update $(basename ${_CPLD_ARCHIVE}) was not provided for ${ONIE_PLATFORM}"
         return "${EXIT_SUCCESS}"
     fi
-
-    local _CPLD_UPDATE_FLAG="0"
-
-    if [[ -f "${CPLD_UPDATE_CONFIG}" ]]; then
-        _CPLD_UPDATE_FLAG="$(cat ${CPLD_UPDATE_CONFIG} 2>&1)"
-    fi
-
-    if [[ "${_CPLD_UPDATE_FLAG}" != "${CPLD_UPDATE_PERMIT}" ]]; then
-        LogNotice "CPLD update was not requested for ${ONIE_PLATFORM}"
-        return "${EXIT_SUCCESS}"
-    fi
-
-    RunCmd "echo ${CPLD_UPDATE_DENY} > ${CPLD_UPDATE_CONFIG}"
 
     CPLD_DIR="$(mktemp -d)"
 
@@ -263,8 +262,7 @@ function UpgradeCPLDFW() {
     elif [[ -f /var/run/hw-management/system/cpld1_version ]]; then
         _CURRENT_CPLD_VERSION="$(cat /var/run/hw-management/system/cpld1_version)"
     else
-        LogWarning "could not retrieve current CPLD firmware version"
-        return "${EXIT_SUCCESS}"
+        ExitFailure "could not retrieve current CPLD firmware version"
     fi
 
     if [[ "${_CURRENT_CPLD_VERSION}" = "${_TARGET_CPLD_VERSION}" ]]; then
@@ -280,7 +278,7 @@ function UpgradeCPLDFW() {
     LogInfo "CPLD burn firmware file: ${_CPLD_BURN_FILE}"
     LogInfo "CPLD refresh firmware file: ${_CPLD_REFRESH_FILE}"
 
-    UpgradeCPLDFW_Worker "${_ASIC_DEV}" "${_CPLD_BURN_FILE}" "${_CPLD_REFRESH_FILE}" &
+    UpgradeCPLDFW_Worker "${_CPLD_BURN_FILE}" "${_CPLD_REFRESH_FILE}" &
     local -r _PID="$!"
 
     while $(ps -e -o pid | grep -E "^[[:blank:]]*${_PID}$" &> /dev/null); do
@@ -294,18 +292,18 @@ function UpgradeFWFromImage() {
     local -r _NEXT_SONIC_IMAGE="$(sonic_installer list | grep 'Next: ' | cut -f2 -d' ')"
     local -r _CURRENT_SONIC_IMAGE="$(sonic_installer list | grep 'Current: ' | cut -f2 -d' ')"
 
-    FS_PATH="/host/image-${_NEXT_SONIC_IMAGE#SONiC-OS-}/fs.squashfs"
-    FS_MOUNTPOINT="/tmp/image-${_NEXT_SONIC_IMAGE#SONiC-OS-}-fs"
-
     if [[ "${_CURRENT_SONIC_IMAGE}" = "${_NEXT_SONIC_IMAGE}" ]]; then
         ExitSuccess "firmware is up to date"
     fi
+
+    FS_PATH="/host/image-${_NEXT_SONIC_IMAGE#SONiC-OS-}/fs.squashfs"
+    FS_MOUNTPOINT="/tmp/image-${_NEXT_SONIC_IMAGE#SONiC-OS-}-fs"
 
     RunCmd "mkdir -p ${FS_MOUNTPOINT}"
     RunCmd "mount -t squashfs ${FS_PATH} ${FS_MOUNTPOINT}"
 
     UpgradeASICFW "${FS_MOUNTPOINT}${FW_FILE}"
-    UpgradeCPLDFW "${FS_MOUNTPOINT}${CPLD_UPDATE_DIR}/${ONIE_MACHINE#mlnx_}_cpld.tar.gz"
+    UpgradeCPLDFW "${FS_MOUNTPOINT}/etc/mlnx/cpld/${ONIE_MACHINE#mlnx_}_cpld.tar.gz"
 }
 
 function Cleanup() {
@@ -330,9 +328,6 @@ if [[ "${CPLD_UPGRADE}" = "${YES_PARAM}" ]]; then
     if [[ "${IMAGE_UPGRADE}" = "${NO_PARAM}" ]]; then
         ExitFailure "mandatory parameter was not provided: -u|--upgrade"
     fi
-
-    RunCmd "mkdir -p ${CPLD_UPDATE_DIR}"
-    RunCmd "echo ${CPLD_UPDATE_PERMIT} > ${CPLD_UPDATE_CONFIG}"
 fi
 
 if [[ "${IMAGE_UPGRADE}" = "${YES_PARAM}" ]]; then
